--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html><head>
 <meta charset="utf-8"><meta name="viewport" cntent="width=device-width, initial-scale=1">
-<meta name="description" content="Personal site of Dan Voronov."><meta name="author" content="Dan Voronov">
+<meta name="description" content="Dan Voronov. Personal site"><meta name="author" content="Dan Voronov">
 <script src="dan-files/js/lib/jquery-3.6.0.min.js"></script>
 <script src="dan-files/js/lib/d3.v4.min.js"></script> 
-<title>Dan Voronov — Personal site</title> 
+<title>Dan Voronov ☀️ Дан Воронов</title> 
 <link rel="stylesheet" href="dan-files/css/graph.css">	
 <style type="text/css">body { margin:0; padding:0; background-size: cover;
     background-color: black;
