--- a/startups/index.html
+++ b/startups/index.html
@@ -67,8 +67,8 @@
     <div class='item'>
       <h3>Coping with jealousy</h3>
       <img src="../dan-files/i/strp/revnost.png" style="width: 552px;">  
-      <p><span>2016–17. Kyiv, Kharkiv</span> Integrated tranformational experience for overcoming personal limits in relationships. </p>
-      <p class="codeinfo">Created by me powerfull offline training program + online awareness marathon-diary with personal tasks [facebook group] + discussion support group</p>
+      <p><span>2016–17. Kyiv, Kharkiv</span> Integrated transformational experience for overcoming personal limits in relationships. </p>
+      <p class="codeinfo">Created by me powerful offline training program + online awareness marathon-diary with personal tasks [facebook group] + discussion support group</p>
     </div>    
   </div>
   <div class='cont' style="padding-top: 40px;">
