codewar to gith rep

--- a/startups/index.html
+++ b/startups/index.html
@@ -6,7 +6,7 @@
 
 <canvas id="starfield"></canvas>
 
-<div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://www.github.com/danvoronov">my github</a> |  <a target="_blank" href="https://www.codewars.com/users/danvoronov">my codewars</a></div>
+<div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://www.github.com/danvoronov">my github</a></div>
 
 <div id="hdr"><h1><span id='hin'>My startups & projects<span></h1></div>
 
