izc2jjDA22M5NmEy

--- a/educator/index.html
+++ b/educator/index.html
@@ -36,7 +36,7 @@
       <h3>Essentialism</h3>
       <center><img src="../dan-files/i/edu/ess.jpg" style="width: 332px;"></center>
       <p><span>2018-20</span> Retelling Greg McKeown "Essentialism" book (<a target="_blank" href="https://www.goodreads.com/book/show/18077875-essentialism">GR</a>) with additinal research and personal experience. </p><p>Сhapter by chapter. 20+ mobile videos and mindmaps in telegram channel. Final summary stream was on my youtube channel.</p>
-      <p>TG: <a target="_blank" href="https://t.me/+izc2jjDA22M5NmEy">"Коротко и по сути"</a></p>
+      <p>TG: <a target="_blank" href="https://t.me/+izc2jjDA22M5NmEy">"Коротко и по сути" (izc2jjDA22M5NmEy)</a></p>
       <p>YT: <a target="_blank" href="https://youtu.be/NPcgENTSRuw">final stream</a></p>
     </div>
 
@@ -45,7 +45,7 @@
       <img src="../dan-files/i/edu/allcnt.jpg" style="width: 332px;">
       <p><span>2019-20</span> Almost every day for year I watched statistics, videos, expat's opinions on each (even the smallest island) country and published the most interesting to telegram channel. <p></p>Additional I looked at game industry and local remarkable games.</p>
       <p>TG: <a target="_blank" href="https://t.me/dv_strani">@dv_strani</a></p>
-      <p>MEDIUM: <a target="_blank" href="https://danvoronov.medium.com/%D0%B8%D1%82%D0%BE%D0%B3-%D0%BF%D1%80%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D1%83-%D0%B8%D0%B7%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D1%8F-%D0%B2%D1%81%D0%B5%D1%85-%D1%81%D1%82%D1%80%D0%B0%D0%BD-598bf3bf5839">final thoughts</a></p>
+      <p>MEDIUM: <a target="_blank" href="https://danvoronov.medium.com/%D0%B8%D1%82%D0%BE%D0%B3-%D0%BF%D1%80%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D1%83-%D0%B8%D0%B7%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D1%8F-%D0%B2%D1%81%D0%B5%D1%85-%D1%81%D1%82%D1%80%D0%B0%D0%BD-598bf3bf5839">some thoughts</a></p>
     </div>
 
     <div class='item'>
