--- a/ru/index.html
+++ b/ru/index.html
@@ -136,7 +136,15 @@ var ajax_tptn_tracker = {"ajax_url":"http:\/\/dan.kiev.ua\/blog\/wp-admin\/admin
 <div id="med">
 
 <ol reversed style="color: black;">
-  <strong>2021</strong>
+  <strong>2022</strong>
+  <li><a href="https://redcircle.com/shows/524e643d-8983-40ff-aae3-86a351198a61/episodes/b5f7bab4-8d4b-4994-b676-43ff5fe7a34a" class="p-canonical" target="_blank"><img src="../dan-files/i/redcircle.png" height="24"></a> Подкаст #2 - Обучение за пределами флеш-карточек • <a href="https://redcircle.com/shows/524e643d-8983-40ff-aae3-86a351198a61/episodes/b5f7bab4-8d4b-4994-b676-43ff5fe7a34a"  target="_blank">слушать</a></li>  
+
+  <li><a href="https://danvoronov.medium.com/%D0%BF%D0%BE%D1%87%D0%B5%D0%BC%D1%83-%D1%84%D0%BB%D0%B5%D1%88-%D0%BA%D0%B0%D1%80%D1%82%D0%BE%D1%87%D0%BA%D0%B8-7bd53149522b" class="p-canonical" target="_blank"><img src="../dan-files/i/medium.jpg" height="24"></a> Почему флеш_карточки? • <a href="https://danvoronov.medium.com/%D0%BF%D0%BE%D1%87%D0%B5%D0%BC%D1%83-%D1%84%D0%BB%D0%B5%D1%88-%D0%BA%D0%B0%D1%80%D1%82%D0%BE%D1%87%D0%BA%D0%B8-7bd53149522b"  target="_blank">читать</a></li>
+  
+  <br/><strong>2021</strong>
+
+  <li><a href="https://redcircle.com/shows/danvoronov/episodes/f3244c71-47db-494c-bf1a-d2383fccb2d7" class="p-canonical" target="_blank"><img src="../dan-files/i/redcircle.png" height="24"></a> Подкаст #1 - Зачем вести дневник? • <a href="https://redcircle.com/shows/danvoronov/episodes/f3244c71-47db-494c-bf1a-d2383fccb2d7"  target="_blank">слушать</a></li>
+  
   <li><a href="https://medium.com/@danvoronov/%D0%BC%D0%B5%D1%82%D0%B0%D0%BF%D0%BE%D0%B8%D1%81%D0%BA-%D0%B8-%D0%B7%D0%B0%D1%87%D0%B5%D0%BC-%D0%BE%D0%BD-%D0%BD%D1%83%D0%B6%D0%B5%D0%BD-bb13680b299e" class="p-canonical" target="_blank"><img src="../dan-files/i/medium.jpg" height="24"></a> Метапоиск и зачем он нужен • <a href="medium/2021-11-24_---------------------------bb13680b299e.html">читать</a></li>
 <li><a href="https://medium.com/@danvoronov/%D0%BF%D1%80%D0%BE-%D1%81%D0%BE%D1%86%D0%B8%D0%BE%D0%BA%D1%80%D0%B0%D1%82%D0%B8%D1%8E-3-0-c19765117843" class="p-canonical" target="_blank"><img src="../dan-files/i/medium.jpg" height="24"></a> Про Социократию 3.0 • <a href="medium/2021-11-03_----------------3-0-c19765117843.html">читать</a></li>
 <li><a href="https://medium.com/@danvoronov/%D0%BF%D1%80%D0%BE-%D1%85%D0%BE%D0%BB%D0%B0%D0%BA%D1%80%D0%B0%D1%82%D0%B8%D1%8E-ae3bc88febf3" class="p-canonical" target="_blank"><img src="../dan-files/i/medium.jpg" height="24"></a> Про Холакратию • <a href="medium/2021-08-11_---------------ae3bc88febf3.html">читать</a></li>
