--- a/art/hybridart/index.html
+++ b/art/hybridart/index.html
@@ -26,11 +26,26 @@
       <section>
         <section class="section section--body section--first">
           <div class="section-content">
-            <div class="section-inner sectionLayout--insetColumn">
+
               <h3 id="49fd" class="graf graf--h3 graf-after--p">Interdisciplinary
                 Art Projects</h3>
-              <p><br>
-              </p>
+<br/>
+            <div class="section-inner sectionLayout--insetColumn">
+              <h4 class="graf graf--h4 graf-after--h3">Contemporary ritual room</h4>
+              <p> Summer <b>2019</b>. I created a symbol system and painted "ritual" graffiti on it. This is an unfinished building of a hospital for the mentally ill. Last floor.</p>
+
+              <div style="text-align: center;"><img src="graffiti.jpg"
+                  alt="Contemporary ritual room"
+                  title="Contemporary ritual room"
+                  style="width: 860px;">
+              </div>
+            </div>  
+
+<br/>
+            <div class="section-inner sectionLayout--insetColumn"><br>
+            </div>
+            <hr>
+            <div class="section-inner sectionLayout--insetColumn">
               <h4 class="graf graf--h4 graf-after--h3">Telegram's bots reading
                 "In the homeless world"</h4>
               <p> Spring <b>2019</b>. I've made rethinking of our with Julia
