--- a/startups/index.html
+++ b/startups/index.html
@@ -19,7 +19,7 @@
     <div class='item'>
       <h3>Walkbots tours</h3>
       <img src="../dan-files/i/strp/botBY.jpg" style="height: 338px;">
-      <p><span>2019–23</span> Telegram bots that use live location feature to tell immersive story on the ground. </p><p>The first story - Kyiv occupation and Babiy Yar Holocaust tragedy during WW2, 40+ points, 15km.</p>
+      <p><span>2019–24</span> Telegram bots that use live location feature to tell immersive story on the ground. </p><p>The first story - Kyiv occupation and Babiy Yar Holocaust tragedy during WW2, 40+ points, 15km.</p>
       <p class="codeinfo">Started as google apps script and then evolved to fully custom engine with KML parser and Telegam bot API POST wrapper [node.js].</p>
    </div>
     
@@ -27,9 +27,8 @@
       <h3>Throught the Kyiv</h3>
       <img src="../dan-files/i/strp/throughtthekiev.jpg" style="width: 552px;">
       <p style="font-size:0.8em">hashtag <a href='https://duckduckgo.com/?q=%23%D0%9A%D0%98%D0%95%D0%92%D0%BD%D0%B0%D1%81%D0%BA%D0%B2%D0%BE%D0%B7%D1%8C&t=h_&ia=web' target="black">#КИЕВнасквозь</a></p>
-      <p><span>2017–19</span> I've developed new Kyiv urban hikes: Throught the City for all day walking. 35-44 km in a group of strangers for free.</p>
+      <p><span>2017–19 // 23-...</span> I've developed new Kyiv urban hikes: Throught the City for all day walking. 35-44 km in a group of strangers for free.</p>
       <p class="codeinfo">Official telegram <a href='https://t.me/kievpohod' target="black">@kievpohod</a>. JS code for showing route's main points and estimated time on map.</p>
-      <p class='covid'>will return after the end of the war</p>
     </div>
     
     <div class='item'>
