https://speakerdeck.com/

--- a/educator/index.html
+++ b/educator/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="../dan-files/css/showcase.css">
 </head><body style="background-color: #590c57;">
 
-<div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://speakerdeck.com/dankievua">my speakerdeck</a></div>
+<div id='toppanel'><a class="back" href="../"><b>&lt; back (ESC)</b></a>  |  <a target="_blank" href="https://speakerdeck.com/danvoronov">my speakerdeck</a></div>
 
 <div id="hdr"><h1><span id='hin'>Educator, Tutor, Speaker<span></h1></div>
 
