--- a/educator/index.html
+++ b/educator/index.html
@@ -27,6 +27,18 @@
 
 <div id="hdr"><h1><span id='hin'>Educator, Tutor, Speaker<span></h1></div>
 
+  <div class="precont">
+    <h2>Large Language Models</h2>
+    <div class='cont'>
+  
+      <div class='item large'>
+        <h3>Code generation using LLMs</h3>
+        <p><span>2023-24</span> I give talks explaining how large language models like ChatGPT and Claude works and how to use them effectively for software development through careful prompt engineering.</p>
+      </div>  
+  
+    </div>
+  </div>
+
 
 <div class="precont">
   <h2>ONLINE</h2>
