--- a/now/index.html
+++ b/now/index.html
@@ -1,1 +1,28 @@
-<!DOCTYPE html><html lang="ru-RU"><head>    <meta http-equiv="content-type" content="text/html; charset=UTF-8">    <title>What I’m doing now | Dan Voronov</title>    <style>	   a {color: black};	</style>  </head><body style="     padding: 0; margin: 30px;">    <div style="margin: auto; min-height: 620px; width: 960px; padding: 30px;">      <a href="../" style="color: #DD4723"><b>&lt; back (ESC)</b></a> | <a href="https://nownownow.com/about" target="black">what is this?</a>      <br><br><div style="padding-top: 20px; font-size: 16pt; line-height: 24pt; "><ul>    <li style="list-style-type: none">🎤 <strong>LLM for Programming:</strong>        <ul>            <li>Conducting ongoing lectures on LLM for programming and recently started a Telegram channel <a href="https://t.me/llms4coding" target="black">@llms4coding</a> on the topic.</li>            <li>Developing an interactive trainer.</li>        </ul>    </li>    <br/>    <li style="list-style-type: none">🧠 <strong>Events on AI History and Intelligence Augmentation Methods:</strong>        <ul>            <li>Preparing a lecture on the history of AI and methods of intelligence augmentation.</li>            <li>Exploring how to incorporate game design mechanics for an effective learning system.</li>        </ul>    </li>    <br/>    <li style="list-style-type: none">🤖 <strong>Walkbots tours startup:</strong>        <ul>            <li>Bot-guided excursions are already underway, focusing on Babi Yar and soon on Podil.</li>        </ul>    </li>    <br/>    <li style="list-style-type: none">📚 <strong>Organizing Self-Knowledge:</strong>        <ul>            <li>Continuing to organize self-knowledge, now using Obsidian.</li>            <li>Contemplating the creation of a gamified life system based on this organization (<I>lifeScreen</I>).</li>        </ul>    </li></ul>           <br></div><hr/>  <span style="font-size: 12pt;">spring 2024. Kyiv, UA<span></div><script src='../dan-files/js/ga.js'></script></body></html>
+<!DOCTYPE html>
+<html lang="ru-RU"><head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>What I’m doing now | Dan Voronov</title>
+    <style>
+	   a {color: black};
+	</style>
+  </head>
+<body style="     padding: 0; margin: 30px;">
+    <div style="margin: auto; min-height: 620px; width: 960px; padding: 30px;">
+      <a href="../" style="color: #DD4723"><b>&lt; back (ESC)</b></a> | <a href="https://nownownow.com/about" target="black">what is this?</a>
+      <br><br>
+
+<div style="padding-top: 20px; font-size: 16pt; line-height: 24pt; ">
+    <ul>
+        <li>🤖 Continuing to develop a tour guide telegram bot engine</li>
+        <li>🏠 Renovating my house</li>
+        <li>🤝 Developing the local community in my neighborhood</li>
+        <li>🕊 Waiting for the end of the war</li>
+    </ul>
+     
+      <br>
+</div>
+<hr/>
+  <span style="font-size: 12pt;">autumn 2024. Kyiv, UA<span>
+
+</div>
+<script src='../dan-files/js/ga.js'></script></body></html>
