--- a/now/index.html
+++ b/now/index.html
@@ -11,18 +11,18 @@
       <a href="../" style="color: #DD4723"><b>&lt; back (ESC)</b></a> | <a href="https://nownownow.com/about" target="black">what is this?</a>
       <br><br>
 
-<div style="padding-top: 20px; font-size: 16pt; line-height: 24pt; ">
-    <ul>
-        <li>🤖 Continuing to develop a tour guide telegram bot engine</li>
-        <li>🏠 Renovating my house</li>
-        <li>🤝 Developing the local community in my neighborhood</li>
-        <li>🕊 Waiting for the end of the war</li>
-    </ul>
-     
-      <br>
+<div style="padding-top: 20px; padding-bottom: 40px; font-size: 16pt; line-height: 24pt; ">
+  <ul>
+    <li>📚️ Studying the history of LEGO constructors and discovering new interesting facts</li>
+    <li>📝️ Started testing (embedings with LLM) RAG for my diary to track progress and achieve goals</li>
+    <li>🤖️ Experimenting with integrating the LLaMA model into my life description to make it more interesting and interactive</li>      
+    <li>❄️ Slowed down community activity during winter, but planning to resume with the arrival of spring</li>
+    <br>
+    <li>🕊️ <i>Continuing to hope for a close end to the war and a peaceful future</i></li>
+</ul>  
 </div>
 <hr/>
-  <span style="font-size: 12pt;">autumn 2024. Kyiv, UA<span>
+  <span style="font-size: 12pt;">winter 2024-25. Kyiv, UA<span>
 
 </div>
 <script src='../dan-files/js/ga.js'></script></body></html>
