--- a/tri/index.html
+++ b/tri/index.html
@@ -354,9 +354,10 @@
             <nav class="nav">
                 Defense Consulting TRIADA
                 <div class="nav-links">
-                    <a href="#services">Services</a>
-                    <a href="#about">About</a>
+                    <a href="#activity">Activity</a>
+                    <a href="#about">About us</a>
                     <a href="#expertise">Expertise</a>
+                    <a href="#mentions">Mentions</a>
                     <a href="#contact">Contact</a>
                 </div>
             </nav>
@@ -366,13 +367,13 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="logo.jpg" alt="Company Logo" class="hero-logo">
+                <img src="logo.jpg" alt="Logo" class="hero-logo">
                 <div class="hero-text">
                     <h1>Bridging Global Defense Innovation with Ukraine</h1>
                     <p>Expert consulting agency connecting world-class defense companies with opportunities in Ukraine. 
                        Young, dynamic team with deep industry expertise.</p>
                     <div class="cta">
-                        <a href="#services" class="btn btn-primary">Our Services</a>
+                        <a href="#activity" class="btn btn-primary">Our Activity</a>
                         <a href="#about" class="btn btn-secondary">Learn More</a>
                     </div>
                 </div>
