--- a/educator/index.html
+++ b/educator/index.html
@@ -31,11 +31,17 @@
     <h2>Large Language Models</h2>
     <div class='cont'>
   
-      <div class='item large'>
+      <div class='item'>
         <h3>Code generation using LLMs</h3>
-        <p><span>2023-24</span> I give talks explaining how large language models like ChatGPT and Claude works and how to use them effectively for software development through careful prompt engineering.</p>
+        <p><span>2023-24</span> I give talks explaining how large language models like ChatGPT and Claude works and how to use them effectively for software development through careful prompt engineering. In addition, I developed an interactive training tool.</p>
       </div>  
-  
+
+      <div class='item'>
+        <h3>LLMs for Coding</h3>
+        <p><span>2024-25</span> My Telegram public <a target="_blank" href="https://t.me/llms4coding">@llms4coding</a>  page covers the latest news and practical tricks in the field of AI programming.</p>
+      </div>
+
+
     </div>
   </div>
 
