--- a/now/index.html
+++ b/now/index.html
@@ -13,16 +13,16 @@
 
 <div style="padding-top: 20px; padding-bottom: 40px; font-size: 16pt; line-height: 24pt; ">
   <ul>
-    <li>📚️ Studying the history of LEGO constructors and discovering new interesting facts</li>
-    <li>📝️ Started testing (embedings with LLM) RAG for my diary to track progress and achieve goals</li>
-    <li>🤖️ Experimenting with integrating the LLaMA model into my life description to make it more interesting and interactive</li>      
-    <li>❄️ Slowed down community activity during winter, but planning to resume with the arrival of spring</li>
+  <li>📚️ Continued my LEGO research by developing an Electron-based catalog application that displays new sets organized by year.</li>
+  <li>📝️ Transitioned my diary project to a new tech stack using Nuxt framework and Supabase SQL database for better functionality and performance.</li>
+  <li>🤖️ More actively maintaining my repository and website where I document how to effectively use AI for coding assistance and development.</li>
+  
     <br>
     <li>🕊️ <i>Continuing to hope for a close end to the war and a peaceful future</i></li>
 </ul>  
 </div>
 <hr/>
-  <span style="font-size: 12pt;">winter 2024-25. Kyiv, UA<span>
+  <span style="font-size: 12pt;">spring 2025. Kyiv, UA<span>
 
 </div>
 <script src='../dan-files/js/ga.js'></script></body></html>
