--- a/educator/index.html
+++ b/educator/index.html
@@ -30,16 +30,34 @@
   <div class="precont">
     <h2>Large Language Models</h2>
     <div class='cont'>
-  
+   
       <div class='item'>
-        <h3>Code generation using LLMs</h3>
-        <p><span>2023-24</span> I give talks explaining how large language models like ChatGPT and Claude works and how to use them effectively for software development through careful prompt engineering. In addition, I developed an interactive training tool.</p>
-      </div>  
+        <h3>Code with LLM</h3>
+        <center><img src="../dan-files/i/edu/aicode.png" style="width: 332px;"></center>
+        <p>
+          <span>2024-25</span> A project on programming with LLM news and practical tricks,
+          which transformed from a Telegram channel
+          (<a target="_blank" href="https://t.me/llms4coding">@llms4coding</a>)
+          into an automatically built website from GitHub repo. Now available with news in both English and Ukrainian.<br/><br/>
+          SITE: <a target="_blank" href="https://aicode.danvoronov.com/">aicode.danvoronov.com</a>
+        </p>
+      </div>
 
       <div class='item'>
-        <h3>LLMs for Coding</h3>
-        <p><span>2024-25</span> My Telegram public <a target="_blank" href="https://t.me/llms4coding">@llms4coding</a>  page covers the latest news and practical tricks in the field of AI programming.</p>
+        <h3>Intelligence Augmentation Club</h3>
+        <p>
+          <span>2024</span> Offered masterclasses through my project, the Intelligence Augmentation Club, 
+          demonstrating how to leverage <a target="_blank" href="https://obsidian.md/">Obsidian</a> 
+          for implementing the Zettelkasten system and enhancing learning through interconnected notes. <br/><br/>
+          We also explored the topic of automating Obsidian with LLMs plugins.
+        </p>
       </div>
+
+      <div class='item'>
+        <h3>Code generation using LLMs</h3>
+        <center><img src="../dan-files/i/edu/lunoteka_lection.png" style="width: 332px;"></center>        
+        <p><span>2023-24</span> I give talks explaining how large language models like GPT-4 and Claude works and how to use them effectively for software development through careful prompt engineering. In addition, I developed an interactive training tool.</p>
+      </div> 
 
 
     </div>
