--- a/educator/index.html
+++ b/educator/index.html
@@ -46,7 +46,7 @@
       <div class='item'>
         <h3>Intelligence Augmentation Club</h3>
         <p>
-          <span>2024</span> Offered masterclasses through my project, the Intelligence Augmentation Club, 
+          <span>2024. Kyiv</span> Offered masterclasses through my project, the Intelligence Augmentation Club, 
           demonstrating how to leverage <a target="_blank" href="https://obsidian.md/">Obsidian</a> 
           for implementing the Zettelkasten system and enhancing learning through interconnected notes. <br/><br/>
           We also explored the topic of automating Obsidian with LLMs plugins.
@@ -56,7 +56,7 @@
       <div class='item'>
         <h3>Code generation using LLMs</h3>
         <center><img src="../dan-files/i/edu/lunoteka_lection.png" style="width: 332px;"></center>        
-        <p><span>2023-24</span> I give talks explaining how large language models like GPT-4 and Claude works and how to use them effectively for software development through careful prompt engineering. In addition, I developed an interactive training tool.</p>
+        <p><span>2023-24. Kyiv</span> I give talks explaining how large language models like GPT-4 and Claude works and how to use them effectively for software development through careful prompt engineering. In addition, I developed an interactive training tool.</p>
       </div> 
 
 
