--- a/now/index.html
+++ b/now/index.html
@@ -14,7 +14,6 @@
 <div style="padding-top: 20px; padding-bottom: 40px; font-size: 16pt; line-height: 24pt; ">
   <ul>
   <li>📚️ Continued my LEGO research by developing an Electron-based catalog application that displays new sets organized by year.</li>
-  <li>📝️ Transitioned my diary project to a new tech stack using Nuxt framework and Supabase SQL database for better functionality and performance.</li>
   <li>🤖️ More actively maintaining my repository and website where I document how to effectively use AI for coding assistance and development.</li>
   
     <br>
@@ -22,7 +21,7 @@
 </ul>  
 </div>
 <hr/>
-  <span style="font-size: 12pt;">spring 2025. Kyiv, UA<span>
+  <span style="font-size: 12pt;">summer 2025. Kyiv, UA<span>
 
 </div>
 <script src='../dan-files/js/ga.js'></script></body></html>
