--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,47 @@
-<!DOCTYPE html><html class="nojs html" style="background-color: #1caf69;" lang="ru-RU">  <head>    <meta http-equiv="content-type" content="text/html; charset=UTF-8">    <title>About | Dan Voronov</title>    <meta name="description" content="Личный сайт. Дан Воронов. Киев">    <meta name="author" content="Dan Voronov">    <style>	   a {color: black};	</style>  </head>  <body style="padding: 0; margin: 30px;">    <div style="margin: auto; min-height: 520px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">      <a href="../" style="color: #DD4723">&lt; home</a><br>      <br>      <em>Born in Kyiv, <a href="https://en.wikipedia.org/wiki/Ukraine" target="_blank">Ukraine</a>.</em>      <br>      <p style="line-height: 18pt; font-size: 14pt;"> I like to explore what is        happens in the edges between. I have Master (not exactly, here it called        Specialist) Degree in <b>Math</b> and Master (yeap, that one real)        Degree in <b>Psychology</b>. <br>        <br>        But thru the life my real passion is <b>Contemporary art</b> and i        doing self-education and learn-by-doing in it constantly. I have done a        lot of <a href="../art/">artworks</a> trying to combine data visualization, cognitive and positive psychology,        spiritual practices, contemporary art. <br>        <br>        Also i've some urban exploration of cities. I love to find by walking or        kickscootoring intersections between nature and town. </p>      <h2><br>      </h2>      <center><img alt='in 2019' src="../dan-files/i/dan_doska_4site.jpg" style="height: 700px;"></center>      <br>      <br>      <a href="../" style="color: #DD4723">&lt; home</a><br>    </div>    <script>  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-5293921-1', 'auto');  ga('send', 'pageview');</script> </body></html>
+<!DOCTYPE html>
+<html class="nojs html" style="background-color: #1caf69;" lang="ru-RU">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>About | Dan Voronov</title>
+    <meta name="description" content="Личный сайт. Дан Воронов. Киев">
+    <meta name="author" content="Dan Voronov">
+    <style>
+	   a {color: black};
+	</style>
+  </head>
+  <body style="padding: 0; margin: 30px;">
+    <div style="margin: auto; min-height: 520px; width: 600px;  background-color: white; border: 10px solid #e5950c; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
+      <a href="../" style="color: #DD4723">&lt; home</a><br>
+      <br>
+      <em>Born in Kyiv, <a href="https://en.wikipedia.org/wiki/Ukraine" target="_blank">Ukraine</a>.</em>
+      <br>
+      <p style="line-height: 18pt; font-size: 14pt;"> I like to explore what is
+        happens in the edges between. I have Master (not exactly, here it called
+        Specialist) Degree in <b>Math</b> and Master (yeap, that one real)
+        Degree in <b>Psychology</b>. <br>
+        <br>
+        But thru the life my real passion is <b>Contemporary art</b> and i
+        doing self-education and learn-by-doing in it constantly. I have done a
+        lot of <a href="../art/">artworks</a> trying to combine data visualization, cognitive and positive psychology,
+        spiritual practices, contemporary art. <br>
+        <br>
+        Also i've some urban exploration of cities. I love to find by walking or
+        kickscootoring intersections between nature and town. </p>
+      <h2><br>
+      </h2>
+      <center><img alt='in 2019' src="../dan-files/i/dan_doska_4site.jpg" style="height: 700px;"></center>
+      <br>
+      <br>
+      <a href="../" style="color: #DD4723">&lt; home</a><br>
+    </div>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-5293921-1', 'auto');
+  ga('send', 'pageview');
+
+</script> </body>
+</html>
