--- a/index.html
+++ b/index.html
@@ -13,8 +13,50 @@
     }
 </style>
 </head>
-<body><div id="graph"></div>
+<body>
+  <div id="graph"></div>
 <script src="menu.js"></script>
 <script src="dan-files/js/graph.js"></script>
 <script src="dan-files/js/ga.js"></script>
+<script>
+(function(){
+  const getLang = () => localStorage.getItem('lang') || 'en';
+  const menuByLang = (lang) => (lang === 'uk' ? (window.mainMenu_uk || window.mainMenu) : window.mainMenu);
+  function applyLang(lang){
+    const src = menuByLang(lang);
+    const map = new Map(src.map(item => [item.id, item.txt]));
+    if(window.graph && Array.isArray(graph.nodes)){
+      graph.nodes.forEach(n => { if(map.has(n.id)) n.txt = map.get(n.id); });
+      if(window.d3){
+        d3.select('#graph').select('svg').select('.texts').selectAll('text').text(d => d.txt);
+      } else {
+        var texts = document.querySelectorAll('#graph svg .texts text');
+        texts.forEach(function(t, i){ t.textContent = (graph.nodes[i] && graph.nodes[i].txt) || t.textContent; });
+      }
+    }
+    localStorage.setItem('lang', lang);
+    const btn = document.getElementById('langToggle');
+    if(btn){
+      btn.textContent = (lang === 'uk') ? 'EN' : 'UA';
+      btn.setAttribute('aria-label', 'Switch language to ' + (lang === 'uk' ? 'English' : 'Ukrainian'));
+    }
+    document.documentElement.lang = (lang === 'uk') ? 'uk' : 'en';
+  }
+  function ensureButton(){
+    let btn = document.getElementById('langToggle');
+    if(!btn){
+      btn = document.createElement('button');
+      btn.id = 'langToggle';
+      btn.style.cssText = 'position:fixed;z-index:9999;top:12px;right:12px;padding:6px 10px;background:rgba(255,255,255,0.85);color:#111;border-radius:4px;border:0;cursor:pointer;font:600 12px/1.2 -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Arial, sans-serif;box-shadow:0 1px 3px rgba(0,0,0,0.2)';
+      btn.addEventListener('click', function(e){ e.preventDefault(); const next = (getLang() === 'uk') ? 'en' : 'uk'; applyLang(next); });
+      document.body.appendChild(btn);
+    }
+    btn.textContent = (getLang() === 'uk') ? 'EN' : 'UA';
+  }
+  // init early so the button appears without delay
+  function initLang(){ ensureButton(); applyLang(getLang()); }
+  if (document.readyState === 'loading') document.addEventListener('DOMContentLoaded', initLang); else initLang();
+  window.addEventListener('storage', function(e){ if(e.key === 'lang') applyLang(localStorage.getItem('lang') || 'en'); });
+})();
+</script>
 </body></html>
