--- a/now/index.html
+++ b/now/index.html
@@ -13,15 +13,16 @@
 
 <div style="padding-top: 20px; padding-bottom: 40px; font-size: 16pt; line-height: 24pt; ">
   <ul>
-  <li>📚️ Continued my LEGO research by developing an Electron-based catalog application that displays new sets organized by year.</li>
-  <li>🤖️ More actively maintaining my repository and website where I document how to effectively use AI for coding assistance and development.</li>
-  
+    <li>💻️ Focused on developing my own (NUXT) diary application using Supabase.</li>
+    <li>📋️ Also working on a task management (VUE) program styled like cards and columns.</li>
+    <li>🤖️ More actively maintaining my repository and website where I document how to effectively use AI for coding assistance and development.</li>
+    <li>📚️ Continued my LEGO research by reading the catalog book.</li>  
     <br>
     <li>🕊️ <i>Continuing to hope for a close end to the war and a peaceful future</i></li>
 </ul>  
 </div>
 <hr/>
-  <span style="font-size: 12pt;">summer 2025. Kyiv, UA<span>
+  <span style="font-size: 12pt;">autumn 2025. Kyiv, UA<span>
 
 </div>
 <script src='../dan-files/js/ga.js'></script></body></html>
