краще укр переклад

--- a/now/index.html
+++ b/now/index.html
@@ -21,8 +21,19 @@
     <li>🕊️ <i>Continuing to hope for a close end to the war and a peaceful future</i></li>
 </ul>  
 </div>
+<div style="padding-top: 20px; padding-bottom: 40px; font-size: 16pt; line-height: 24pt; ">
+  <ul>
+    <li>💻️ Зосередився на розробці власної системи (NUXT) додатка-щоденника, використовуючи Supabase.</li>
+    <li>📋️ Також працю над програмою для управління завданнями (VUE), стилізованою під картки та колонки.</li>
+    <li>🤖️ Активніше підтримую свій репозиторій та вебсайт, де документую, як ефективно використовувати ШІ для допомоги в кодуванні та розробці.</li>
+    <li>📚️ Продовжив своє дослідження LEGO, читаючи каталог-книгу.</li>  
+    <br>
+    <li>🕊️ <i>Продовжу надіятися на близький кінець війни та мирний майбутнє</i></li>
+</ul>  
+</div>
 <hr/>
-  <span style="font-size: 12pt;">autumn 2025. Kyiv, UA<span>
+  <span style="font-size: 12pt;">autumn 2025. Kyiv, UA<span> |
+    <span style="font-size: 12pt;">осінь 2025. Київ, Україна<span></span>
 
 </div>
 <script src='../dan-files/js/ga.js'></script></body></html>
