--- a/dr/42/wishlist/index.html
+++ b/dr/42/wishlist/index.html
@@ -595,7 +595,7 @@
                             
                             ${text ? `<p class="item-description">${escapeHtml(text)}</p>` : ''}
                             
-                            ${url ? `<a href="${escapeHtml(url)}" target="_blank" class="item-link">🔗 Посилання на товар</a>` : ''}
+                            ${url ? `<a href="${escapeHtml(url)}" target="_blank" class="item-link">[ Посилання приклад ]</a>` : ''}
                         </div>
                     </div>
                 </div>
